--- a/templates/first.html
+++ b/templates/first.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+	<h1>Hello World</h1>
+	<h1>Hello World</h1>
+	<h2>Make America Grate Again</h2>
 </body>
 </html>
