--- a/templates/first.html
+++ b/templates/first.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-	<h1>Hello World</h1>
-	<h1>Hello World</h1>
-	<h2>Make America Grate Again</h2>
+	<h1>Hello World from Texas</h1>
+	<h1>Hello World from Houston</h1>
+	<h2>Make America Grate Again from Webster</h2>
 </body>
 </html>
